[project]
name = "Comfy-Switch-Samplers"
description = "Switch sampler nodes for ComfyUI"
version = "1.1.3"
license = {file = "LICENSE"}
dependencies = [None]

[project.urls]
Repository = "https://github.com/azazeal04/comfyui-switch-samplers"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "azazeal04"
DisplayName = "Comfyui-Switch-Samplers"
Icon = ""
